--- a/app/src/main/res/layout/activity_quiz_row_vh.xml
+++ b/app/src/main/res/layout/activity_quiz_row_vh.xml
@@ -9,12 +9,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="8dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -31,10 +35,16 @@
                     android:id="@+id/question"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
                     android:text="Question"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="12dp" />
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="#EEEEEE" />
 
                 <RadioGroup
                     android:id="@+id/radioGroup"
@@ -46,29 +56,29 @@
                         android:id="@+id/optionA"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Option A"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp"
+                        android:text="Option A" />
 
                     <RadioButton
                         android:id="@+id/optionB"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Option B"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp"
+                        android:text="Option B" />
 
                     <RadioButton
                         android:id="@+id/optionC"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Option C"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp"
+                        android:text="Option C" />
 
                     <RadioButton
                         android:id="@+id/optionD"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Option D"
-                        android:layout_marginTop="5dp"/>
+                        android:layout_marginTop="5dp"
+                        android:text="Option D" />
 
                 </RadioGroup>
 
