--- a/app/src/main/res/layout/activity_test_form.xml
+++ b/app/src/main/res/layout/activity_test_form.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/testFormPage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.TestFormActivity"
+    tools:context=".ui.TestFormActivity"
     android:layout_gravity="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -64,13 +64,13 @@
             android:layout_marginTop="10dp"
             android:entries="@array/quiz_levels"
             android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
-            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+            app:layout_constraintEnd_toEndOf="@+id/numberOfQuestions"
+            app:layout_constraintStart_toStartOf="@+id/numberOfQuestions"
+            app:layout_constraintTop_toBottomOf="@+id/numberOfQuestions" />
 
 
         <EditText
-            android:id="@+id/editTextNumber"
+            android:id="@+id/numberOfQuestions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -91,8 +91,8 @@
             android:text="START TEST"
             android:textColor="@color/white"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
-            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
+            app:layout_constraintEnd_toEndOf="@+id/numberOfQuestions"
+            app:layout_constraintStart_toStartOf="@+id/numberOfQuestions"
             app:layout_constraintTop_toBottomOf="@+id/quizLevel" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
